--- a/Fashion MNIST.ipynb
+++ b/Fashion MNIST.ipynb
@@ -785,7 +785,19 @@
    "id": "31242a38",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predictions_single[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "276145f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_single[1]"
+   ]
   }
  ],
  "metadata": {
@@ -793,18 +805,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
